--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,19 +1,19 @@
 specVersion: 0.0.4
-description: Bao Markets subgraph
-repository: https://github.com/baofinance/bao-markets-subgraph
+description: Subgraph for the baoUSD vault by Bao Finance.
+repository: https://github.com/baofinance/baoUSD-vault-subraph
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: bdUSDC
-    network: ropsten
+    network: mainnet
     source:
-      address: "0xcaad85c5a9f31c679742ea6f8654c3b53b4c6d7d"
+      address: "0x7749f9f3206A49d4c47b60db05716409dC3A4149"
       abi: CToken
-      startBlock: 11873394
+      startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.6
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -30,10 +30,10 @@ dataSources:
         - name: ERC20
           file: ./abis/erc20.json
       eventHandlers:
-#        - event: Mint(address,uint256,uint256)
-#          handler: handleMint
-#        - event: Redeem(address,uint256,uint256)
-#          handler: handleRedeem
+       #- event: Mint(address,uint256,uint256)
+       #  handler: handleMint
+       #- event: Redeem(address,uint256,uint256)
+       #  handler: handleRedeem
         - event: Borrow(address,uint256,uint256,uint256)
           handler: handleBorrow
         - event: RepayBorrow(address,address,uint256,uint256,uint256)
@@ -50,14 +50,14 @@ dataSources:
           handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
     name: bdUSD
-    network: ropsten
+    network: mainnet
     source:
-      address: "0xfd4cdc5129dd794e26fd3764c8f2075ee13b9a53"
+      address: "0xc0601094c0c88264ba285fef0a1b00ef13e79347"
       abi: CToken
-      startBlock: 11873394
+      startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.6
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -74,10 +74,96 @@ dataSources:
         - name: ERC20
           file: ./abis/erc20.json
       eventHandlers:
-#        - event: Mint(address,uint256,uint256)
-#          handler: handleMint
-#        - event: Redeem(address,uint256,uint256)
-#          handler: handleRedeem
+       #- event: Mint(address,uint256,uint256)
+       #  handler: handleMint
+       #- event: Redeem(address,uint256,uint256)
+       #  handler: handleRedeem
+        - event: Borrow(address,uint256,uint256,uint256)
+          handler: handleBorrow
+        - event: RepayBorrow(address,address,uint256,uint256,uint256)
+          handler: handleRepayBorrow
+        - event: LiquidateBorrow(address,address,uint256,address,uint256)
+          handler: handleLiquidateBorrow
+        - event: AccrueInterest(uint256,uint256,uint256)
+          handler: handleAccrueInterest
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel
+  - kind: ethereum/contract
+    name: bdSTBL
+    network: mainnet
+    source:
+      address: "0xE0a55c00E6510F4F7df9af78b116B7f8E705cA8F"
+      abi: CToken
+      startBlock: 14000000
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/mappings/ctoken.ts
+      entities:
+        - User
+        - Market
+        - CTokenInfo
+      abis:
+        - name: CToken
+          file: ./abis/ctoken.json
+        - name: PriceOracle
+          file: ./abis/priceOracle.json
+        - name: PriceOracle2
+          file: ./abis/priceOracle2.json
+        - name: ERC20
+          file: ./abis/erc20.json
+      eventHandlers:
+       #- event: Mint(address,uint256,uint256)
+       #  handler: handleMint
+       #- event: Redeem(address,uint256,uint256)
+       #  handler: handleRedeem
+        - event: Borrow(address,uint256,uint256,uint256)
+          handler: handleBorrow
+        - event: RepayBorrow(address,address,uint256,uint256,uint256)
+          handler: handleRepayBorrow
+        - event: LiquidateBorrow(address,address,uint256,address,uint256)
+          handler: handleLiquidateBorrow
+        - event: AccrueInterest(uint256,uint256,uint256)
+          handler: handleAccrueInterest
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel          
+  - kind: ethereum/contract
+    name: bdETHArchived
+    network: mainnet
+    source:
+      address: "0xe7a52262C1934951207c5fc7A944A82D283C83e5"
+      abi: CToken
+      startBlock: 14000000
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/mappings/ctoken.ts
+      entities:
+        - User
+        - Market
+        - CTokenInfo
+      abis:
+        - name: CToken
+          file: ./abis/ctoken.json
+        - name: PriceOracle
+          file: ./abis/priceOracle.json
+        - name: PriceOracle2
+          file: ./abis/priceOracle2.json
+      eventHandlers:
+        #- event: Mint(address,uint256,uint256)
+        #  handler: handleMint
+        #- event: Redeem(address,uint256,uint256)
+        #  handler: handleRedeem
         - event: Borrow(address,uint256,uint256,uint256)
           handler: handleBorrow
         - event: RepayBorrow(address,address,uint256,uint256,uint256)
@@ -94,14 +180,14 @@ dataSources:
           handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
     name: bdETH
-    network: ropsten
+    network: mainnet
     source:
-      address: "0xd4e71a9d982b74110cc3307d7d296927b3afbbdc"
+      address: "0xF635fdF9B36b557bD281aa02fdfaeBEc04CD084A"
       abi: CToken
-      startBlock: 11873394
+      startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.6
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -116,10 +202,10 @@ dataSources:
         - name: PriceOracle2
           file: ./abis/priceOracle2.json
       eventHandlers:
-#        - event: Mint(address,uint256,uint256)
-#          handler: handleMint
-#        - event: Redeem(address,uint256,uint256)
-#          handler: handleRedeem
+       #- event: Mint(address,uint256,uint256)
+       #  handler: handleMint
+       #- event: Redeem(address,uint256,uint256)
+       #  handler: handleRedeem
         - event: Borrow(address,uint256,uint256,uint256)
           handler: handleBorrow
         - event: RepayBorrow(address,address,uint256,uint256,uint256)
@@ -133,17 +219,17 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
         - event: NewMarketInterestRateModel(address,address)
-          handler: handleNewMarketInterestRateModel
+          handler: handleNewMarketInterestRateModel        
   - kind: ethereum/contract
     name: Comptroller
-    network: ropsten
+    network: mainnet
     source:
-      address: "0x831e1605dd6a085e3b47f6f094df2fa3806d7143"
+      address: "0x0Be1fdC1E87127c4fe7C05bAE6437e3cf90Bf8d8"
       abi: Comptroller
       startBlock: 11873394
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.6
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       file: ./src/mappings/comptroller.ts
       entities:
