--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: bdUSD
     network: mainnet
     source:
-      address: "0xc0601094c0c88264ba285fef0a1b00ef13e79347"
+      address: "0xc0601094C0C88264Ba285fEf0a1b00eF13e79347"
       abi: CToken
       startBlock: 14000000
     mapping:
@@ -42,12 +42,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        - event: NewReserveFactor(uint256,uint256)
-          handler: handleNewReserveFactor
+        # - event: NewReserveFactor(uint256,uint256)
+        #   handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: NewMarketInterestRateModel(address,address)
-          handler: handleNewMarketInterestRateModel
+        # - event: NewMarketInterestRateModel(address,address)
+        #   handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
     name: bdSTBL
     network: mainnet
@@ -86,12 +86,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        - event: NewReserveFactor(uint256,uint256)
-          handler: handleNewReserveFactor
+        # - event: NewReserveFactor(uint256,uint256)
+        #   handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: NewMarketInterestRateModel(address,address)
-          handler: handleNewMarketInterestRateModel          
+        # - event: NewMarketInterestRateModel(address,address)
+        #   handler: handleNewMarketInterestRateModel          
   - kind: ethereum/contract
     name: bdETH
     network: mainnet
@@ -128,12 +128,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        - event: NewReserveFactor(uint256,uint256)
-          handler: handleNewReserveFactor
+        # - event: NewReserveFactor(uint256,uint256)
+        #   handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: NewMarketInterestRateModel(address,address)
-          handler: handleNewMarketInterestRateModel        
+        # - event: NewMarketInterestRateModel(address,address)
+        #   handler: handleNewMarketInterestRateModel        
   - kind: ethereum/contract
     name: bdETHArchived
     network: mainnet
@@ -170,12 +170,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        - event: NewReserveFactor(uint256,uint256)
-          handler: handleNewReserveFactor
+        # - event: NewReserveFactor(uint256,uint256)
+        #   handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: NewMarketInterestRateModel(address,address)
-          handler: handleNewMarketInterestRateModel
+        # - event: NewMarketInterestRateModel(address,address)
+        #   handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
     name: bdUSDCArchived
     network: mainnet
@@ -214,12 +214,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        - event: NewReserveFactor(uint256,uint256)
-          handler: handleNewReserveFactor
+        # - event: NewReserveFactor(uint256,uint256)
+        #   handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: NewMarketInterestRateModel(address,address)
-          handler: handleNewMarketInterestRateModel
+        # - event: NewMarketInterestRateModel(address,address)
+        #   handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
     name: Comptroller
     network: mainnet
@@ -243,15 +243,15 @@ dataSources:
       eventHandlers:
         - event: MarketEntered(address,address)
           handler: handleMarketEntered
-        - event: MarketExited(address,address)
-          handler: handleMarketExited
-        - event: NewCloseFactor(uint256,uint256)
-          handler: handleNewCloseFactor
-        - event: NewCollateralFactor(address,uint256,uint256)
-          handler: handleNewCollateralFactor
-        - event: NewLiquidationIncentive(uint256,uint256)
-          handler: handleNewLiquidationIncentive
-        - event: NewMaxAssets(uint256,uint256)
-          handler: handleNewMaxAssets
-        - event: NewPriceOracle(address,address)
-          handler: handleNewPriceOracle
+        # - event: MarketExited(address,address)
+        #   handler: handleMarketExited
+        # - event: NewCloseFactor(uint256,uint256)
+        #   handler: handleNewCloseFactor
+        # - event: NewCollateralFactor(address,uint256,uint256)
+        #   handler: handleNewCollateralFactor
+        # - event: NewLiquidationIncentive(uint256,uint256)
+        #   handler: handleNewLiquidationIncentive
+        # - event: NewMaxAssets(uint256,uint256)
+        #   handler: handleNewMaxAssets
+        # - event: NewPriceOracle(address,address)
+        #   handler: handleNewPriceOracle
