--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,19 +1,19 @@
-specVersion: 0.0.4
-description: Subgraph for the baoUSD vault by Bao Finance.
-repository: https://github.com/baofinance/baoUSD-vault-subraph
+specVersion: 0.0.3
+description: Bao Markets Synthetics Platform
+repository: https://github.com/baofinance/bao-markets-subgraph
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: bdUSD
+    name: bdUSDC
     network: mainnet
     source:
-      address: "0xc0601094C0C88264Ba285fEf0a1b00eF13e79347"
+      address: "0x7749f9f3206A49d4c47b60db05716409dC3A4149"
       abi: CToken
       startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -42,12 +42,56 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        # - event: NewReserveFactor(uint256,uint256)
-        #   handler: handleNewReserveFactor
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        # - event: NewMarketInterestRateModel(address,address)
-        #   handler: handleNewMarketInterestRateModel
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel
+  - kind: ethereum/contract
+    name: bdUSD
+    network: mainnet
+    source:
+      address: "0xc0601094c0c88264ba285fef0a1b00ef13e79347"
+      abi: CToken
+      startBlock: 14000000
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/ctoken.ts
+      entities:
+        - User
+        - Market
+        - CTokenInfo
+      abis:
+        - name: CToken
+          file: ./abis/ctoken.json
+        - name: PriceOracle
+          file: ./abis/priceOracle.json
+        - name: PriceOracle2
+          file: ./abis/priceOracle2.json
+        - name: ERC20
+          file: ./abis/erc20.json
+      eventHandlers:
+       #- event: Mint(address,uint256,uint256)
+       #  handler: handleMint
+       #- event: Redeem(address,uint256,uint256)
+       #  handler: handleRedeem
+        - event: Borrow(address,uint256,uint256,uint256)
+          handler: handleBorrow
+        - event: RepayBorrow(address,address,uint256,uint256,uint256)
+          handler: handleRepayBorrow
+        - event: LiquidateBorrow(address,address,uint256,address,uint256)
+          handler: handleLiquidateBorrow
+        - event: AccrueInterest(uint256,uint256,uint256)
+          handler: handleAccrueInterest
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
     name: bdSTBL
     network: mainnet
@@ -57,7 +101,7 @@ dataSources:
       startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -86,54 +130,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        # - event: NewReserveFactor(uint256,uint256)
-        #   handler: handleNewReserveFactor
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        # - event: NewMarketInterestRateModel(address,address)
-        #   handler: handleNewMarketInterestRateModel          
-  - kind: ethereum/contract
-    name: bdETH
-    network: mainnet
-    source:
-      address: "0xF635fdF9B36b557bD281aa02fdfaeBEc04CD084A"
-      abi: CToken
-      startBlock: 14000000
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.7
-      language: wasm/assemblyscript
-      file: ./src/mappings/ctoken.ts
-      entities:
-        - User
-        - Market
-        - CTokenInfo
-      abis:
-        - name: CToken
-          file: ./abis/ctoken.json
-        - name: PriceOracle
-          file: ./abis/priceOracle.json
-        - name: PriceOracle2
-          file: ./abis/priceOracle2.json
-      eventHandlers:
-       #- event: Mint(address,uint256,uint256)
-       #  handler: handleMint
-       #- event: Redeem(address,uint256,uint256)
-       #  handler: handleRedeem
-        - event: Borrow(address,uint256,uint256,uint256)
-          handler: handleBorrow
-        - event: RepayBorrow(address,address,uint256,uint256,uint256)
-          handler: handleRepayBorrow
-        - event: LiquidateBorrow(address,address,uint256,address,uint256)
-          handler: handleLiquidateBorrow
-        - event: AccrueInterest(uint256,uint256,uint256)
-          handler: handleAccrueInterest
-        # - event: NewReserveFactor(uint256,uint256)
-        #   handler: handleNewReserveFactor
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handleTransfer
-        # - event: NewMarketInterestRateModel(address,address)
-        #   handler: handleNewMarketInterestRateModel        
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel          
   - kind: ethereum/contract
     name: bdETHArchived
     network: mainnet
@@ -143,7 +145,7 @@ dataSources:
       startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -170,22 +172,22 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        # - event: NewReserveFactor(uint256,uint256)
-        #   handler: handleNewReserveFactor
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        # - event: NewMarketInterestRateModel(address,address)
-        #   handler: handleNewMarketInterestRateModel
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel
   - kind: ethereum/contract
-    name: bdUSDCArchived
+    name: bdETH
     network: mainnet
     source:
-      address: "0x7749f9f3206A49d4c47b60db05716409dC3A4149"
+      address: "0xF635fdF9B36b557bD281aa02fdfaeBEc04CD084A"
       abi: CToken
       startBlock: 14000000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/mappings/ctoken.ts
       entities:
@@ -199,13 +201,11 @@ dataSources:
           file: ./abis/priceOracle.json
         - name: PriceOracle2
           file: ./abis/priceOracle2.json
-        - name: ERC20
-          file: ./abis/erc20.json
       eventHandlers:
-        #- event: Mint(address,uint256,uint256)
-        #  handler: handleMint
-        #- event: Redeem(address,uint256,uint256)
-        #  handler: handleRedeem
+       #- event: Mint(address,uint256,uint256)
+       #  handler: handleMint
+       #- event: Redeem(address,uint256,uint256)
+       #  handler: handleRedeem
         - event: Borrow(address,uint256,uint256,uint256)
           handler: handleBorrow
         - event: RepayBorrow(address,address,uint256,uint256,uint256)
@@ -214,12 +214,12 @@ dataSources:
           handler: handleLiquidateBorrow
         - event: AccrueInterest(uint256,uint256,uint256)
           handler: handleAccrueInterest
-        # - event: NewReserveFactor(uint256,uint256)
-        #   handler: handleNewReserveFactor
+        - event: NewReserveFactor(uint256,uint256)
+          handler: handleNewReserveFactor
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        # - event: NewMarketInterestRateModel(address,address)
-        #   handler: handleNewMarketInterestRateModel
+        - event: NewMarketInterestRateModel(address,address)
+          handler: handleNewMarketInterestRateModel        
   - kind: ethereum/contract
     name: Comptroller
     network: mainnet
@@ -229,7 +229,7 @@ dataSources:
       startBlock: 11873394
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/mappings/comptroller.ts
       entities:
@@ -243,15 +243,15 @@ dataSources:
       eventHandlers:
         - event: MarketEntered(address,address)
           handler: handleMarketEntered
-        # - event: MarketExited(address,address)
-        #   handler: handleMarketExited
-        # - event: NewCloseFactor(uint256,uint256)
-        #   handler: handleNewCloseFactor
-        # - event: NewCollateralFactor(address,uint256,uint256)
-        #   handler: handleNewCollateralFactor
-        # - event: NewLiquidationIncentive(uint256,uint256)
-        #   handler: handleNewLiquidationIncentive
-        # - event: NewMaxAssets(uint256,uint256)
-        #   handler: handleNewMaxAssets
-        # - event: NewPriceOracle(address,address)
-        #   handler: handleNewPriceOracle
+        - event: MarketExited(address,address)
+          handler: handleMarketExited
+        - event: NewCloseFactor(uint256,uint256)
+          handler: handleNewCloseFactor
+        - event: NewCollateralFactor(address,uint256,uint256)
+          handler: handleNewCollateralFactor
+        - event: NewLiquidationIncentive(uint256,uint256)
+          handler: handleNewLiquidationIncentive
+        - event: NewMaxAssets(uint256,uint256)
+          handler: handleNewMaxAssets
+        - event: NewPriceOracle(address,address)
+          handler: handleNewPriceOracle
